@@ -60,7 +60,11 @@ rm -rf $PKG
 mkdir -p $TMP $PKG $OUTPUT
 cd $TMP
 rm -rf $PRGNAM-$VERSION
-tar xvf $CWD/$PRGNAM-$VERSION.tar.gz || tar xvf $CWD/v$VERSION.tar.gz
+if [ -f $CWD/$PRGNAM-$VERSION.tar.gz ]; then
+    tar xvf $CWD/$PRGNAM-$VERSION.tar.gz || tar xvf $CWD/v$VERSION.tar.gz
+else
+    unzip $CWD/$PRGNAM-$VERSION.zip
+fi
 cd $PRGNAM-$VERSION
 chown -R root:root .
 find -L . \
