@@ -1,8 +1,9 @@
 Version 1.7.9
-29-08-2014
+30-08-2014
 
 [Feature] - Added extra and pasture packages from official Slackware
             tree.
+          - Added install.sh script.
 [Updated] - Remove destination file after copy to sbo script directory.
 
 Version 1.7.8
